examples/test/testpolicy12551.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12551
  namespace: namespace343
spec:
  podSelector:
    matchLabels:
      key31: value44
      key3: value42
      key10: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value41
          key18: value32
      podSelector:
        matchLabels:
          key24: value19
          key8: value38
